force-app/main/default/objects/Entrega__c/Entrega__c.object-meta.xml
<CustomObject>
    <label>Pendentes mercadorias</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Número de Entrega</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pendentes mercadorias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>