force-app/main/default/objects/Entrega__c/fields/Analise_Logistica_1__c.field-meta.xml
<CustomField>
    <fullName>Analise_Logistica_1__c</fullName>
    <formula>Promessa__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1ª Análise Logística</label>
    <type>Date</type>
</CustomField>