force-app/main/default/objects/Entrega__c/fields/Analise_Logistica_2__c.field-meta.xml
<CustomField>
    <fullName>Analise_Logistica_2__c</fullName>
    <formula>Promessa__c - 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2ª Análise Logística</label>
    <type>Date</type>
</CustomField>