force-app/main/default/objects/Entrega__c/fields/Certificado_de_Devolucao_para_incidencia__c.field-meta.xml
<CustomField>
    <fullName>Certificado_de_Devolucao_para_incidencia__c</fullName>
    <label>Certificado de Devolução para incidencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>