force-app/main/default/objects/Entrega__c/fields/Cliente_Contactado_na_Data_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Contactado_na_Data_de_Entrega__c</fullName>
    <label>Cliente Contactado na Data de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Não Contactado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>