force-app/main/default/objects/Entrega__c/fields/Encerramento_da_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>Encerramento_da_Incidencia__c</fullName>
    <label>Encerramento da Incidência</label>
    <type>Date</type>
</CustomField>