force-app/main/default/objects/Entrega__c/fields/Entrega_Confirmada__c.field-meta.xml
<CustomField>
    <fullName>Entrega_Confirmada__c</fullName>
    <label>Entrega Confirmada</label>
    <type>Date</type>
</CustomField>