force-app/main/default/objects/Entrega__c/fields/Entrega_ConfirmadaSN__c.field-meta.xml
<CustomField>
    <fullName>Entrega_ConfirmadaSN__c</fullName>
    <formula>IF( ISBLANK(Entrega_Confirmada__c ) , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entrega Confirmada</label>
    <type>Checkbox</type>
</CustomField>