force-app/main/default/objects/Entrega__c/fields/Incidencia_EncerradaSN__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_EncerradaSN__c</fullName>
    <formula>IF( ISBLANK(Encerramento_da_Incidencia__c)  , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incidencia Encerrada</label>
    <type>Checkbox</type>
</CustomField>