force-app/main/default/objects/Entrega__c/fields/Motivo_da_Incidencia__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_Incidencia__c</fullName>
    <label>Motivo da Incidência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artigos a mais</fullName>
            </value>
            <value>
                <fullName>Erro de Projeto</fullName>
            </value>
            <value>
                <fullName>Artigos danificados</fullName>
            </value>
            <value>
                <fullName>Instalador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>