force-app/main/default/objects/Entrega__c/fields/Motivo_de_Nao_Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Nao_Reembolso__c</fullName>
    <label>Motivo de Não Reembolso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Solicitado_Reembolso_a_caixas__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gesto comercial</fullName>
            </value>
            <value>
                <fullName>Troca de artigo de valor superior</fullName>
            </value>
            <value>
                <fullName>Litígio com cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>