force-app/main/default/objects/Entrega__c/fields/N_da_loja__c.field-meta.xml
<CustomField>
    <fullName>N_da_loja__c</fullName>
    <label>Nº da loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>