force-app/main/default/objects/Entrega__c/fields/N_do_Certificado__c.field-meta.xml
<CustomField>
    <fullName>N_do_Certificado__c</fullName>
    <label>Nº do Certificado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>