force-app/main/default/objects/Entrega__c/fields/Pedido_de_Reembolso__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_Reembolso__c</fullName>
    <label>Pedido de Reembolso</label>
    <type>Date</type>
</CustomField>