force-app/main/default/objects/Entrega__c/fields/Solicitado_Reembolso_a_caixas__c.field-meta.xml
<CustomField>
    <fullName>Solicitado_Reembolso_a_caixas__c</fullName>
    <label>Solicitado Reembolso a caixas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>