force-app/main/default/objects/Entrega__c/fields/Tipo_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Entrega__c</fullName>
    <label>Tipo de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Levantamento em Loja</fullName>
            </value>
            <value>
                <fullName>Entrega ao Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>