force-app/main/default/objects/Entrega__c/fields/Valor_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Pedido__c</fullName>
    <label>Valor do Pedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>