force-app/main/default/objects/Entrega__c/validationRules/Motivo_de_nao_reembolso.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_nao_reembolso</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Solicitado_Reembolso_a_caixas__c, &apos;NÃO&apos;),
ISPICKVAL( Motivo_de_Nao_Reembolso__c ,&quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Preencher o Motivo de Não reembolso.</errorMessage>
</ValidationRule>